Fix Dark mode switch btn

--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,6 @@ html {
 }
 
 body {
-  background: rgb(236, 76, 138);
-  background: linear-gradient(180deg, rgb(243, 97, 153) 34%, rgb(255, 0, 98) 100%);
-  background-attachment: fixed;
   color: var(--text-color);
   font-size: 1.6rem;
   line-height: 1.5;
@@ -61,9 +58,16 @@ section {
   display: none;
 }
 
-#dark body {
+#dark {
   background: rgb(0, 39, 108);
   background: linear-gradient(180deg, rgba(0, 39, 108, 1) 5%, rgba(0, 5, 23, 1) 67%);
+  background-attachment: fixed;
+}
+
+#light {
+  background: rgb(236, 76, 138);
+  background: linear-gradient(180deg, rgb(243, 97, 153) 34%, rgb(255, 0, 98) 100%);
+  background-attachment: fixed;
 }
 
 #dark .nav_bar {
